--- a/app/src/main/res/layout/activity_available_product_details.xml
+++ b/app/src/main/res/layout/activity_available_product_details.xml
@@ -26,11 +26,15 @@
                 android:id="@+id/product_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
                 android:text="Product Name"
                 android:textColor="#111"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/price"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,10 +45,14 @@
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
                 android:text="Price"
                 android:textColor="#111"
-                android:textSize="18sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +94,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="RAM"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/ram"
                 app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +136,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="ROM"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/rom"
                 app:layout_constraintStart_toStartOf="parent"
@@ -171,7 +179,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Camera"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/camera"
                 app:layout_constraintStart_toStartOf="parent"
@@ -212,7 +220,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Battery"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/battery"
                 app:layout_constraintStart_toStartOf="parent"
@@ -253,7 +261,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Display"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/display"
                 app:layout_constraintStart_toStartOf="parent"
@@ -294,7 +302,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Processor"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/processor"
                 app:layout_constraintStart_toStartOf="parent"
@@ -335,7 +343,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Network"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/network"
                 app:layout_constraintStart_toStartOf="parent"
@@ -356,6 +364,58 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
         </android.support.constraint.ConstraintLayout>
 
+
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout91"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="#ffff"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">
+
+            <TextView
+                android:id="@+id/textView0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="Sim"
+                android:textColor="#A52727"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/sim"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/sim"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginBottom="8dp"
+                android:text="TEXT"
+                android:textColor="#111"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView0" />
+        </android.support.constraint.ConstraintLayout>
+
+
+
+
+
+
+
+
+
+
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout10"
             android:layout_width="match_parent"
@@ -364,7 +424,7 @@
             android:background="#ffff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout91">
 
             <TextView
                 android:id="@+id/textView10"
@@ -376,7 +436,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Fingerprint"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/fingerprint"
                 app:layout_constraintStart_toStartOf="parent"
@@ -418,7 +478,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Others"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/others"
                 app:layout_constraintStart_toStartOf="parent"
@@ -459,7 +519,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Color"
                 android:textColor="#A52727"
-                android:textSize="16sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/color"
                 app:layout_constraintStart_toStartOf="parent"
