calling option and messenger chatting option

--- a/app/src/main/res/layout/activity_available_product_details.xml
+++ b/app/src/main/res/layout/activity_available_product_details.xml
@@ -157,6 +157,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 
+
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
@@ -543,6 +544,7 @@
 
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ffff"
@@ -571,9 +573,50 @@
             </com.google.android.youtube.player.YouTubePlayerView>
         </android.support.constraint.ConstraintLayout>
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout20">
+
+            <ImageView
+                android:id="@+id/call_button"
+                android:layout_width="58dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/call_button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/messenger_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/messenger_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+        </android.support.constraint.ConstraintLayout>
+
+
+
+
 
 
     </android.support.constraint.ConstraintLayout>
+
+
 
 
 </ScrollView>
